--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@babel/preset-env": "7.5.0",
     "@babel/preset-react": "7.0.0",
     "@babel/runtime": "7.5.0",
+    "@svgr/webpack": "^5.4.0",
     "babel-eslint": "9.0.0",
     "babel-loader": "8.0.4",
+    "css-loader": "^4.3.0",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.1",
     "eslint-config-prettier": "4.3.0",
@@ -19,16 +21,19 @@
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.18.0",
     "eslint-plugin-react-hooks": "1.7.0",
+    "file-loader": "^6.1.0",
     "prettier": "1.19.1",
     "regenerator-runtime": "0.13.2",
+    "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "1.2.3",
     "ts-loader": "6.2.1",
     "typescript": "3.7.5",
     "webpack": "4.41.6",
-    "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.10.3"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/classnames": "^2.2.10",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
     "@types/styled-components": "4.4.2",
@@ -38,6 +43,7 @@
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "style-loader": "^1.2.1",
     "styled-components": "5.0.0"
   },
   "scripts": {
