--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "resolveJsonModule": true,
     "isolatedModules": true
   },
-  "include": ["src"],
+  "include": ["src", "src/components", "custom.d.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
