--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "style-loader": "^1.2.1",
-    "styled-components": "5.0.0"
+    "styled-components": "^5.0.0"
   },
   "scripts": {
     "build": "webpack --config ./webpack.prod.js --mode production",
