--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": false
   },
   "include": ["src", "src/components", "custom.d.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"]
