--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://ut329280.github.io/123456789",
   "name": "gen",
   "devDependencies": {
     "@babel/core": "7.5.0",
@@ -26,6 +27,7 @@
     "eslint-plugin-react": "7.18.0",
     "eslint-plugin-react-hooks": "1.7.0",
     "file-loader": "^6.1.0",
+    "gh-pages": "^3.1.0",
     "husky": "^4.3.0",
     "jest": "^26.5.0",
     "prettier": "1.19.1",
@@ -57,7 +59,9 @@
   "scripts": {
     "build": "webpack --config ./webpack.prod.js --mode production",
     "dev": "webpack-dev-server --host 0.0.0.0",
-    "watch": "webpack --config ./webpack.config.js --mode development"
+    "watch": "webpack --config ./webpack.config.js --mode development",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d public"
   },
   "jest": {
     "transform": {
