Fix gh-pages homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ut329280.github.io/123456789",
+  "homepage": "https://oleksiikoko.github.io/WhoWantsBeAMillionaire",
   "name": "gen",
   "devDependencies": {
     "@babel/core": "7.5.0",
